--- a/idioms/ctor.html
+++ b/idioms/ctor.html
@@ -169,8 +169,8 @@
                     <main>
                         <h1><a class="header" href="#constructors" id="constructors">Constructors</a></h1>
 <h2><a class="header" href="#description" id="description">Description</a></h2>
-<p>Rust does not have constructors as a language construct. Instead, the convention
-is to use a static <code>new</code> method to create an object.</p>
+<p>Rust does not have constructors as a language construct. Instead, the
+convention is to use a static <code>new</code> method to create an object.</p>
 <h2><a class="header" href="#example" id="example">Example</a></h2>
 <pre><code class="language-rust ignore">// A Rust vector, see liballoc/vec.rs
 pub struct Vec&lt;T&gt; {
@@ -194,8 +194,8 @@ impl&lt;T&gt; Vec&lt;T&gt; {
 }
 </code></pre>
 <h2><a class="header" href="#see-also" id="see-also">See also</a></h2>
-<p>The <a href="../patterns/builder.html">builder pattern</a> for constructing objects where there are multiple
-configurations.</p>
+<p>The <a href="../patterns/builder.html">builder pattern</a> for constructing objects where
+there are multiple configurations.</p>
 
                     </main>
 
