--- a/idioms/ffi-intro.html
+++ b/idioms/ffi-intro.html
@@ -169,11 +169,13 @@
                     <main>
                         <h1><a class="header" href="#ffi-idioms" id="ffi-idioms">FFI Idioms</a></h1>
 <p>Writing FFI code is an entire course in itself.
-However, there are several idioms here that can act as pointers, and avoid traps for inexperienced users of <code>unsafe</code> Rust.</p>
+However, there are several idioms here that can act as pointers, and avoid
+traps for inexperienced users of <code>unsafe</code> Rust.</p>
 <p>This section contains idioms that may be useful when doing FFI.</p>
 <ol>
 <li>
-<p><a href="./ffi-errors.html">Idiomatic Errors</a> - Error handling with integer codes and sentinel return values (such as <code>NULL</code> pointers)</p>
+<p><a href="./ffi-errors.html">Idiomatic Errors</a> - Error handling with integer codes and
+sentinel return values (such as <code>NULL</code> pointers)</p>
 </li>
 <li>
 <p><a href="./ffi-accepting-strings.html">Accepting Strings</a> with minimal unsafe code</p>
