--- a/idioms/priv-extend.html
+++ b/idioms/priv-extend.html
@@ -190,16 +190,20 @@ fn main(s: a::S) {
 </code></pre>
 <h2><a class="header" href="#discussion" id="discussion">Discussion</a></h2>
 <p>Adding a field to a struct is a mostly backwards compatible change.
-However, if a client uses a pattern to deconstruct a struct instance, they might name all the fields in the struct
-and adding a new one would break that pattern.
-The client could name some of the fields and use <code>..</code> in the pattern, in which case adding another field is backwards compatible.
-Making at least one of the struct's fields private forces clients to use the latter form of patterns, ensuring that the struct is future-proof.</p>
-<p>The downside of this approach is that you might need to add an otherwise unneeded field to the struct.
-You can use the <code>()</code> type so that there is no runtime overhead and prepend <code>_</code> to the field name to avoid the unused field warning.</p>
-<p>If Rust allowed private variants of enums, we could use the same trick to make adding a variant to an enum backwards compatible.
-The problem there is exhaustive match expressions.
-A private variant would force clients to have a <code>_</code> wildcard pattern.
-A common way to implement this instead is using the <a href="https://doc.rust-lang.org/reference/attributes/type_system.html">#[non_exhaustive]</a> attribute.</p>
+However, if a client uses a pattern to deconstruct a struct instance, they
+might name all the fields in the struct and adding a new one would break that
+pattern. The client could name some of the fields and use <code>..</code> in the pattern,
+in which case adding another field is backwards compatible. Making at least one
+of the struct's fields private forces clients to use the latter form of patterns,
+ensuring that the struct is future-proof.</p>
+<p>The downside of this approach is that you might need to add an otherwise unneeded
+field to the struct. You can use the <code>()</code> type so that there is no runtime overhead
+and prepend <code>_</code> to the field name to avoid the unused field warning.</p>
+<p>If Rust allowed private variants of enums, we could use the same trick to make
+adding a variant to an enum backwards compatible. The problem there is exhaustive
+match expressions. A private variant would force clients to have a <code>_</code> wildcard
+pattern. A common way to implement this instead is using the <a href="https://doc.rust-lang.org/reference/attributes/type_system.html"><code>#[non_exhaustive]</code></a>
+attribute.</p>
 
                     </main>
 
