--- a/idioms/temporary-mutability.html
+++ b/idioms/temporary-mutability.html
@@ -169,9 +169,11 @@
                     <main>
                         <h1><a class="header" href="#temporary-mutability" id="temporary-mutability">Temporary mutability</a></h1>
 <h2><a class="header" href="#description" id="description">Description</a></h2>
-<p>Often it is necessary to prepare and process some data, but after that data are only inspected
-and never modified. The intention can be made explicit by redefining the mutable variable as immutable.</p>
-<p>It can be done either by processing data within nested block or by redefining variable.</p>
+<p>Often it is necessary to prepare and process some data, but after that data are
+only inspected and never modified. The intention can be made explicit by redefining
+the mutable variable as immutable.</p>
+<p>It can be done either by processing data within nested block or by redefining
+variable.</p>
 <h2><a class="header" href="#example" id="example">Example</a></h2>
 <p>Say, vector must be sorted before usage.</p>
 <p>Using nested block:</p>
