--- a/index.html
+++ b/index.html
@@ -192,7 +192,8 @@ anti-patterns create more problems.</li>
 They are social norms of the community.
 You can break them, but if you do you should have a good reason for it.</li>
 </ul>
-<p>TODO: Mention why Rust is a bit special - functional elements, type system, borrow checker</p>
+<p>TODO: Mention why Rust is a bit special - functional elements, type system,
+borrow checker</p>
 
                     </main>
 
