--- a/patterns/builder.html
+++ b/patterns/builder.html
@@ -200,9 +200,11 @@ impl FooBuilder {
     }
 
     // If we can get away with not consuming the Builder here, that is an
-    // advantage. It means we can use the FooBuilder as a template for constructing many Foos.
+    // advantage. It means we can use the FooBuilder as a template for constructing
+    // many Foos.
     pub fn build(self) -&gt; Foo {
-        // Create a Foo from the FooBuilder, applying all settings in FooBuilder to Foo.
+        // Create a Foo from the FooBuilder, applying all settings in FooBuilder
+        // to Foo.
         Foo { bar: self.bar }
     }
 }
@@ -251,7 +253,8 @@ let f = fb.build();
 <h2><a class="header" href="#see-also" id="see-also">See also</a></h2>
 <ul>
 <li><a href="https://web.archive.org/web/20210104103100/https://doc.rust-lang.org/1.12.0/style/ownership/builders.html">Description in the style guide</a></li>
-<li><a href="https://crates.io/crates/derive_builder">derive_builder</a>, a crate for automatically implementing this pattern while avoiding the boilerplate.</li>
+<li><a href="https://crates.io/crates/derive_builder">derive_builder</a>, a crate for automatically
+implementing this pattern while avoiding the boilerplate.</li>
 <li><a href="../idioms/ctor.html">Constructor pattern</a> for when construction is simpler.</li>
 <li><a href="https://en.wikipedia.org/wiki/Builder_pattern">Builder pattern (wikipedia)</a></li>
 <li><a href="https://web.archive.org/web/20210104103000/https://rust-lang.github.io/api-guidelines/type-safety.html#c-builder">Construction of complex values</a></li>
