--- a/idioms/pass-var-to-closure.html
+++ b/idioms/pass-var-to-closure.html
@@ -169,9 +169,10 @@
                     <main>
                         <h1><a class="header" href="#pass-variables-to-closure" id="pass-variables-to-closure">Pass variables to closure</a></h1>
 <h2><a class="header" href="#description" id="description">Description</a></h2>
-<p>By default, closures capture their environment by borrowing. Or you can use <code>move</code>-closure
-to move whole environment. However, often you want to move just some variables to closure,
-give it copy of some data, pass it by reference, or perform some other transformation.</p>
+<p>By default, closures capture their environment by borrowing. Or you can use
+<code>move</code>-closure to move whole environment. However, often you want to move just
+some variables to closure, give it copy of some data, pass it by reference, or
+perform some other transformation.</p>
 <p>Use variable rebinding in separate scope for that.</p>
 <h2><a class="header" href="#example" id="example">Example</a></h2>
 <p>Use</p>
@@ -211,9 +212,11 @@ let closure = move || {
 <span class="boring">}
 </span></code></pre></pre>
 <h2><a class="header" href="#advantages" id="advantages">Advantages</a></h2>
-<p>Copied data are grouped together with closure definition, so their purpose is more clear
-and they will be dropped immediately even if they are not consumed by closure.</p>
-<p>Closure uses same variable names as surrounding code whether data are copied or moved.</p>
+<p>Copied data are grouped together with closure definition, so their purpose is
+more clear and they will be dropped immediately even if they are not consumed
+by closure.</p>
+<p>Closure uses same variable names as surrounding code whether data are copied or
+moved.</p>
 <h2><a class="header" href="#disadvantages" id="disadvantages">Disadvantages</a></h2>
 <p>Additional indentation of closure body.</p>
 
