--- a/patterns/ffi-intro.html
+++ b/patterns/ffi-intro.html
@@ -169,14 +169,17 @@
                     <main>
                         <h1><a class="header" href="#ffi-patterns" id="ffi-patterns">FFI Patterns</a></h1>
 <p>Writing FFI code is an entire course in itself.
-However, there are several idioms here that can act as pointers, and avoid traps for inexperienced users of unsafe Rust.</p>
+However, there are several idioms here that can act as pointers, and avoid traps
+for inexperienced users of unsafe Rust.</p>
 <p>This section contains design patterns that may be useful when doing FFI.</p>
 <ol>
 <li>
-<p><a href="./ffi-export.html">Object-Based API</a> design that has good memory safety characteristics, and a clean boundary of what is safe and what is unsafe</p>
+<p><a href="./ffi-export.html">Object-Based API</a> design that has good memory safety characteristics,
+and a clean boundary of what is safe and what is unsafe</p>
 </li>
 <li>
-<p><a href="./ffi-wrappers.html">Type Consolidation into Wrappers</a> - group multiple Rust types together into an opaque &quot;object&quot;</p>
+<p><a href="./ffi-wrappers.html">Type Consolidation into Wrappers</a> - group multiple Rust types
+together into an opaque &quot;object&quot;</p>
 </li>
 </ol>
 
