--- a/patterns/ffi-wrappers.html
+++ b/patterns/ffi-wrappers.html
@@ -169,25 +169,32 @@
                     <main>
                         <h1><a class="header" href="#type-consolidation-into-wrappers" id="type-consolidation-into-wrappers">Type Consolidation into Wrappers</a></h1>
 <h2><a class="header" href="#description" id="description">Description</a></h2>
-<p>This pattern is designed to allow gracefully handling multiple related types, while minimizing the surface area for memory unsafety.</p>
+<p>This pattern is designed to allow gracefully handling multiple related types,
+while minimizing the surface area for memory unsafety.</p>
 <p>One of the cornerstones of Rust's aliasing rules is lifetimes.
-This ensures that many patterns of access between types can be memory safe, data race safety included.</p>
-<p>However, when Rust types are exported to other languages, they are usually transformed into pointers.
-In Rust, a pointer means &quot;the user manages the lifetime of the pointee.&quot; It is their responsibility to avoid memory unsafety.</p>
-<p>Some level of trust in the user code is thus required, notably around use-after-free which Rust can do nothing about.
-However, some API designs place higher burdens than others on the code written in the other language.</p>
-<p>The lowest risk API is the &quot;consolidated wrapper&quot;, where all possible interactions with an object
-are folded into a &quot;wrapper type&quot;, while keeping the Rust API clean.</p>
+This ensures that many patterns of access between types can be memory safe,
+data race safety included.</p>
+<p>However, when Rust types are exported to other languages, they are usually transformed
+into pointers. In Rust, a pointer means &quot;the user manages the lifetime of the pointee.&quot;
+It is their responsibility to avoid memory unsafety.</p>
+<p>Some level of trust in the user code is thus required, notably around use-after-free
+which Rust can do nothing about. However, some API designs place higher burdens
+than others on the code written in the other language.</p>
+<p>The lowest risk API is the &quot;consolidated wrapper&quot;, where all possible interactions
+with an object are folded into a &quot;wrapper type&quot;, while keeping the Rust API clean.</p>
 <h2><a class="header" href="#code-example" id="code-example">Code Example</a></h2>
-<p>To understand this, let us look at a classic example of an API to export: iteration through a collection.</p>
+<p>To understand this, let us look at a classic example of an API to export: iteration
+through a collection.</p>
 <p>That API looks like this:</p>
 <ol>
 <li>The iterator is initialized with <code>first_key</code>.</li>
 <li>Each call to <code>next_key</code> will advance the iterator.</li>
 <li>Calls to <code>next_key</code> if the iterator is at the end will do nothing.</li>
-<li>As noted above, the iterator is &quot;wrapped into&quot; the collection (unlike the native Rust API).</li>
+<li>As noted above, the iterator is &quot;wrapped into&quot; the collection (unlike the native
+Rust API).</li>
 </ol>
-<p>If the iterator implements <code>nth()</code> efficiently, then it is possible to make it ephemeral to each function call:</p>
+<p>If the iterator implements <code>nth()</code> efficiently, then it is possible to make it
+ephemeral to each function call:</p>
 <pre><code class="language-rust ignore">struct MySetWrapper {
     myset: MySet,
     iter_next: usize,
@@ -211,15 +218,19 @@ impl MySetWrapper {
 <p>As a result, the wrapper is simple and contains no <code>unsafe</code> code.</p>
 <h2><a class="header" href="#advantages" id="advantages">Advantages</a></h2>
 <p>This makes APIs safer to use, avoiding issues with lifetimes between types.
-See <a href="./ffi-export.html">Object-Based APIs</a> for more on the advantages and pitfalls this avoids.</p>
+See <a href="./ffi-export.html">Object-Based APIs</a> for more on the advantages and pitfalls
+this avoids.</p>
 <h2><a class="header" href="#disadvantages" id="disadvantages">Disadvantages</a></h2>
-<p>Often, wrapping types is quite difficult, and sometimes a Rust API compromise would make things easier.</p>
+<p>Often, wrapping types is quite difficult, and sometimes a Rust API compromise
+would make things easier.</p>
 <p>As an example, consider an iterator which does not efficiently implement <code>nth()</code>.
-It would definitely be worth putting in special logic to make the object handle iteration internally,
-or to support a different access pattern efficiently that only the Foreign Function API will use.</p>
+It would definitely be worth putting in special logic to make the object handle
+iteration internally, or to support a different access pattern efficiently that
+only the Foreign Function API will use.</p>
 <h3><a class="header" href="#trying-to-wrap-iterators-and-failing" id="trying-to-wrap-iterators-and-failing">Trying to Wrap Iterators (and Failing)</a></h3>
-<p>To wrap any type of iterator into the API correctly, the wrapper would need to do what a C version of
-the code would do: erase the lifetime of the iterator, and manage it manually.</p>
+<p>To wrap any type of iterator into the API correctly, the wrapper would need to
+do what a C version of the code would do: erase the lifetime of the iterator,
+and manage it manually.</p>
 <p>Suffice it to say, this is <em>incredibly</em> difficult.</p>
 <p>Here is an illustration of just <em>one</em> pitfall.</p>
 <p>A first version of <code>MySetWrapper</code> would look like this:</p>
@@ -230,11 +241,13 @@ the code would do: erase the lifetime of the iterator, and manage it manually.</
     iterator: Option&lt;NonNull&lt;KeysIter&lt;'static&gt;&gt;&gt;,
 }
 </code></pre>
-<p>With <code>transmute</code> being used to extend a lifetime, and a pointer to hide it, it's ugly already.
-But it gets even worse: <em>any other operation can cause Rust <code>undefined behaviour</code></em>.</p>
-<p>Consider that the <code>MySet</code> in the wrapper could be manipulated by other functions during iteration,
-such as storing a new value to the key it was iterating over.
-The API doesn't discourage this, and in fact some similar C libraries expect it.</p>
+<p>With <code>transmute</code> being used to extend a lifetime, and a pointer to hide it,
+it's ugly already. But it gets even worse: <em>any other operation can cause
+Rust <code>undefined behaviour</code></em>.</p>
+<p>Consider that the <code>MySet</code> in the wrapper could be manipulated by other
+functions during iteration, such as storing a new value to the key it was
+iterating over. The API doesn't discourage this, and in fact some similar C
+libraries expect it.</p>
 <p>A simple implementation of <code>myset_store</code> would be:</p>
 <pre><code class="language-rust ignore">pub mod unsafe_module {
 
@@ -245,7 +258,7 @@ The API doesn't discourage this, and in fact some similar C libraries expect it.
         key: datum,
         value: datum) -&gt; libc::c_int {
 
-        /* DO NOT USE THIS CODE. IT IS UNSAFE TO DEMONSTRATE A PROLBEM. */
+        // DO NOT USE THIS CODE. IT IS UNSAFE TO DEMONSTRATE A PROLBEM.
 
         let myset: &amp;mut MySet = unsafe { // SAFETY: whoops, UB occurs in here!
             &amp;mut (*myset).myset
@@ -260,21 +273,27 @@ The API doesn't discourage this, and in fact some similar C libraries expect it.
     }
 }
 </code></pre>
-<p>If the iterator exists when this function is called, we have violated one of Rust's aliasing rules.
-According to Rust, the mutable reference in this block must have <em>exclusive</em> access to the object.
-If the iterator simply exists, it's not exclusive, so we have <code>undefined behaviour</code>! <sup class="footnote-reference"><a href="#1">1</a></sup></p>
+<p>If the iterator exists when this function is called, we have violated one of Rust's
+aliasing rules. According to Rust, the mutable reference in this block must have
+<em>exclusive</em> access to the object. If the iterator simply exists, it's not exclusive,
+so we have <code>undefined behaviour</code>! <sup class="footnote-reference"><a href="#1">1</a></sup></p>
 <p>To avoid this, we must have a way of ensuring that mutable reference really is exclusive.
-That basically means clearing out the iterator's shared reference while it exists, and then reconstructing it.
-In most cases, that will still be less efficient than the C version.</p>
+That basically means clearing out the iterator's shared reference while it exists,
+and then reconstructing it. In most cases, that will still be less efficient than
+the C version.</p>
 <p>Some may ask: how can C do this more efficiently?
-The answer is, it cheats. Rust's aliasing rules are the problem, and C simply ignores them for its pointers.
-In exchange, it is common to see code that is declared in the manual as &quot;not thread safe&quot; under some or all circumstances.
-In fact, <a href="https://manpages.debian.org/buster/manpages/attributes.7.en.html">The GNU C library has an entire lexicon dedicated to concurrent behavior!</a></p>
-<p>Rust would rather make everything memory safe all the time, for both safety and optimizations that C code cannot attain.
-Being denied access to certain shortcuts is the price Rust programmers need to pay.</p>
+The answer is, it cheats. Rust's aliasing rules are the problem, and C simply ignores
+them for its pointers. In exchange, it is common to see code that is declared
+in the manual as &quot;not thread safe&quot; under some or all circumstances. In fact,
+the <a href="https://manpages.debian.org/buster/manpages/attributes.7.en.html">GNU C library</a>
+has an entire lexicon dedicated to concurrent behavior!</p>
+<p>Rust would rather make everything memory safe all the time, for both safety and
+optimizations that C code cannot attain. Being denied access to certain shortcuts
+is the price Rust programmers need to pay.</p>
 <div class="footnote-definition" id="1"><sup class="footnote-definition-label">1</sup>
-<p>For the C programmers out there scratching their heads, the iterator need not be read <em>during</em> this code cause the UB.
-The exclusivity rule also enables compiler optimizations which may cause inconsistent observations by the iterator's
+<p>For the C programmers out there scratching their heads, the iterator need
+not be read <em>during</em> this code cause the UB. The exclusivity rule also enables
+compiler optimizations which may cause inconsistent observations by the iterator's
 shared reference (e.g. stack spills or reordering instructions for efficiency).
 These observations may happen <em>any time after</em> the mutable reference is created.</p>
 </div>
