--- a/patterns/strategy.html
+++ b/patterns/strategy.html
@@ -172,24 +172,25 @@
 <p>The <a href="https://en.wikipedia.org/wiki/Strategy_pattern">Strategy design pattern</a>
 is a technique that enables separation of concerns.
 It also allows to decouple software modules through <a href="https://en.wikipedia.org/wiki/Dependency_inversion_principle">Dependency Inversion</a>.</p>
-<p>The basic idea behind the Strategy pattern is that, given an algorithm solving a particular problem,
-we define only the skeleton of the algorithm at an abstract level and
-we separate the specific algorithm’s implementation into different parts.</p>
-<p>In this way, a client using the algorithm may choose a specific implementation, while the general algorithm workflow remains the same.
-In other words, the abstract specification of the class does not depend on the specific implementation of the derived class,
-but specific implementation must adhere to the abstract specification.
+<p>The basic idea behind the Strategy pattern is that, given an algorithm solving
+a particular problem, we define only the skeleton of the algorithm at an abstract
+level and we separate the specific algorithm’s implementation into different parts.</p>
+<p>In this way, a client using the algorithm may choose a specific implementation,
+while the general algorithm workflow remains the same. In other words, the abstract
+specification of the class does not depend on the specific implementation of the
+derived class, but specific implementation must adhere to the abstract specification.
 This is why we call it &quot;Dependency Inversion&quot;.</p>
 <h2><a class="header" href="#motivation" id="motivation">Motivation</a></h2>
 <p>Imagine we are working on a project that generates reports every month.
 We need the reports to be generated in different formats (strategies), e.g.,
 in <code>JSON</code> or <code>Plain Text</code> formats.
-But things vary over time and we don't know what kind of requirement we may get in the future.
-For example, we may need to generate our report in a completly new format,
-or just modify one of the existing formats.</p>
+But things vary over time and we don't know what kind of requirement we may get
+in the future. For example, we may need to generate our report in a completly new
+format, or just modify one of the existing formats.</p>
 <h2><a class="header" href="#example" id="example">Example</a></h2>
-<p>In this example our invariants (or abstractions) are <code>Context</code>, <code>Formatter</code>, and <code>Report</code>,
-while <code>Text</code> and <code>Json</code> are our strategy structs.
-These strategies have to implement the <code>Formatter</code> trait.</p>
+<p>In this example our invariants (or abstractions) are <code>Context</code>, <code>Formatter</code>,
+and <code>Report</code>, while <code>Text</code> and <code>Json</code> are our strategy structs. These strategies
+have to implement the <code>Formatter</code> trait.</p>
 <pre><pre class="playground"><code class="language-rust edition2018">use std::collections::HashMap;
 type Data = HashMap&lt;String, u32&gt;;
 
@@ -250,16 +251,15 @@ fn main() {
 }
 </code></pre></pre>
 <h2><a class="header" href="#advantages" id="advantages">Advantages</a></h2>
-<p>The main advantage is separation of concerns. For example, in this case <code>Report</code> does not know anything about specific
-implementations of <code>Json</code> and <code>Text</code>, whereas the output implementations does not care about how data is
-preprocessed, stored, and fetched.
-The only thing they have to know is context and a specific trait and method to implement,
-i.e,<code>Formatter</code> and <code>run</code>.</p>
+<p>The main advantage is separation of concerns. For example, in this case <code>Report</code>
+does not know anything about specific implementations of <code>Json</code> and <code>Text</code>,
+whereas the output implementations does not care about how data is preprocessed,
+stored, and fetched. The only thing they have to know is context and a specific
+trait and method to implement, i.e,<code>Formatter</code> and <code>run</code>.</p>
 <h2><a class="header" href="#disadvantages" id="disadvantages">Disadvantages</a></h2>
 <p>For each strategy there must be implemented at least one module, so number of modules
-increases with number of strategies.
-If there are many strategies to choose from then users have to know how strategies differ
-from one another.</p>
+increases with number of strategies. If there are many strategies to choose from
+then users have to know how strategies differ from one another.</p>
 <h2><a class="header" href="#discussion" id="discussion">Discussion</a></h2>
 <p>In the previous example all strategies are implemented in a single file.
 Ways of providing different strategies includes:</p>
@@ -269,10 +269,12 @@ Ways of providing different strategies includes:</p>
 <li>Use compiler feature flags, E.g. <code>json</code> feature, <code>text</code> feature</li>
 <li>Separated as crates, E.g. <code>json</code> crate, <code>text</code> crate</li>
 </ul>
-<p>Serde crate is a good example of the <code>Strategy</code> pattern in action. Serde allows <a href="https://serde.rs/custom-serialization.html">full customization</a>
-of the serialization behavior by manually implementing <code>Serialize</code> and <code>Deserialize</code> traits for our type.
-For example, we could easily swap <code>serde_json</code> with <code>serde_cbor</code> since they expose similar methods.
-Having this makes the helper crate <code>serde_transcode</code> much more useful and ergonomic.</p>
+<p>Serde crate is a good example of the <code>Strategy</code> pattern in action. Serde allows
+<a href="https://serde.rs/custom-serialization.html">full customization</a> of the serialization
+behavior by manually implementing <code>Serialize</code> and <code>Deserialize</code> traits for our
+type. For example, we could easily swap <code>serde_json</code> with <code>serde_cbor</code> since they
+expose similar methods. Having this makes the helper crate <code>serde_transcode</code> much
+more useful and ergonomic.</p>
 <p>However, we don't need to use traits in order to design this pattern in Rust.</p>
 <p>The following toy example demonstrates the idea of the Strategy pattern using Rust
 <code>closures</code>:</p>
